--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="gaovzA6jmuzuawk8oMg79nWeNOIzrQUo5nVpp8ixIlk" />
+  <meta charset="UTF-8"  />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Apprendre Python - Quiz Progressif (200 questions)</title>
   <style>
