--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+   <meta name="description" content="Quiz Python مبسط يساعدك على تعلم لغة بايثون بطريقة سهلة و ممتعة. جربي تجاوب على الأسئلة و اكتشفي نتيجتك!">
    <meta name="google-site-verification" content="gaovzA6jmuzuawk8oMg79nWeNOIzrQUo5nVpp8ixIlk" />
   <meta charset="UTF-8"  />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
